update form login

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,6 +2,11 @@
     background-color:#16a085;
 }
 
+.my-text-primary{
+    color:#16a085;
+}
+
+
 .my-btn-primary{
     background-color:#16a085;
     color: white;
