--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -45,3 +45,26 @@
     object-fit:contain; 
     object-position:center;
 }
+
+/* 
+.bootstrap-select .dropdown-menu li {
+    font-size: 1rem;
+}
+
+.bootstrap-select .dropdown-menu li a {
+    width: 100%;
+    height: 100%;
+    display: block;
+    padding: 10px 15px;
+    color: #858796;
+}
+
+.bootstrap-select .dropdown-menu li.selected a {
+    background: #2e59d9;
+    color: white;
+}
+
+.bootstrap-select .dropdown-menu li a:hover {
+    background: #2e59d9;
+    color: white;
+} */
