--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -40,10 +40,12 @@
 }
 
 .img-ktp {
-    height: 15rem;
+    height: 16rem;
     width: 26rem;
-    object-fit:contain; 
+    object-fit:fill; 
     object-position:center;
+    box-shadow: 0px 0px 10px 5px #dedede;;
+    border-radius: 15px;
 }
 
 /* 
